--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="howToPlayButton">How to Play</string>
     <!-->Game Screen<-->
     <string name="start">Start</string>
+    <string name="easy">Easy</string>
+    <string name="hard">Hard</string>
+    <string name="back">Back</string>
+    <string name="score">Score</string>
 
 
 </resources>
