--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,19 @@
     <!-->Main Screen<-->
     <string name="playButton">Play</string>
     <string name="aboutButton">About</string>
-    <string name="highScoresButton">High Scores</string>
     <string name="howToPlayButton">How to Play</string>
+    <string name="highScoresButton">High Scores</string>
     <!-->Game Screen<-->
     <string name="start">Start</string>
     <string name="easy">Easy</string>
     <string name="hard">Hard</string>
     <string name="back">Back</string>
     <string name="score">Score</string>
+    <!-->Colors<-->
+    <string name="green">Green</string>
+    <string name="red">Red</string>
+    <string name="yellow">Yellow</string>
+    <string name="blue">Blue</string>
 
 
 </resources>
