SoftKeyboard Android bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="score">Score</string>
     <!-->Game Over Screen<-->
     <string name="gameOver">Game Over</string>
-    <!-->Colors<-->
+    <string name="typeName">Type here your name</string>
+    <string name="saveScore">Save score</string>
+    <!-->GeniusColor<-->
 
 </resources>
