About / HowTo added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="gameOver">Game Over</string>
     <string name="typeName">Type here your name</string>
     <string name="saveScore">Save score</string>
-    <!-->GeniusColor<-->
+    <!-->How to play Screen<-->
+
+    <!-->About Screen<-->
+
 
 </resources>
