About Screen rename

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="saveScore">Save score</string>
     <!-->How to play Screen<-->
 
-    <!-->About Screen<-->
+    <!-->AboutScreen Screen<-->
 
 
 </resources>
