--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="gameOver">Game Over</string>
     <string name="typeName">Type here your name</string>
     <string name="saveScore">Save score</string>
+    <string name="provideName">Type a valid name(White spaces are ignored!)</string>
     <!-->How to play Screen<-->
 
     <!-->AboutScreen Screen<-->
